my-react-app/api/UseEffectGrammarParser.py
# Generated from UseEffectGrammar.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class UseEffectGrammarParser ( Parser ):

    grammarFileName = "UseEffectGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'useEffect'", "'('", "','", "')'", "';'", 
                     "'()'", "'=>'", "'['", "']'", "'{'", "'}'", "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "STRING", "WS" ]

    RULE_prog = 0
    RULE_useEffectCall = 1
    RULE_callback = 2
    RULE_params = 3
    RULE_dependencyArray = 4
    RULE_block = 5
    RULE_statement = 6
    RULE_exprStmt = 7
    RULE_returnStmt = 8

    ruleNames =  [ "prog", "useEffectCall", "callback", "params", "dependencyArray", 
                   "block", "statement", "exprStmt", "returnStmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    ID=13
    STRING=14
    WS=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def useEffectCall(self):
            return self.getTypedRuleContext(UseEffectGrammarParser.UseEffectCallContext,0)


        def getRuleIndex(self):
            return UseEffectGrammarParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = UseEffectGrammarParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.useEffectCall()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseEffectCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def callback(self):
            return self.getTypedRuleContext(UseEffectGrammarParser.CallbackContext,0)


        def dependencyArray(self):
            return self.getTypedRuleContext(UseEffectGrammarParser.DependencyArrayContext,0)


        def getRuleIndex(self):
            return UseEffectGrammarParser.RULE_useEffectCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseEffectCall" ):
                listener.enterUseEffectCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseEffectCall" ):
                listener.exitUseEffectCall(self)




    def useEffectCall(self):

        localctx = UseEffectGrammarParser.UseEffectCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_useEffectCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(UseEffectGrammarParser.T__0)
            self.state = 21
            self.match(UseEffectGrammarParser.T__1)
            self.state = 22
            self.callback()
            self.state = 23
            self.match(UseEffectGrammarParser.T__2)
            self.state = 24
            self.dependencyArray()
            self.state = 25
            self.match(UseEffectGrammarParser.T__3)
            self.state = 26
            self.match(UseEffectGrammarParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallbackContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(UseEffectGrammarParser.BlockContext,0)


        def params(self):
            return self.getTypedRuleContext(UseEffectGrammarParser.ParamsContext,0)


        def getRuleIndex(self):
            return UseEffectGrammarParser.RULE_callback

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallback" ):
                listener.enterCallback(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallback" ):
                listener.exitCallback(self)




    def callback(self):

        localctx = UseEffectGrammarParser.CallbackContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_callback)
        try:
            self.state = 37
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [UseEffectGrammarParser.T__5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.match(UseEffectGrammarParser.T__5)
                self.state = 29
                self.match(UseEffectGrammarParser.T__6)
                self.state = 30
                self.block()
                pass
            elif token in [UseEffectGrammarParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.match(UseEffectGrammarParser.T__1)
                self.state = 32
                self.params()
                self.state = 33
                self.match(UseEffectGrammarParser.T__3)
                self.state = 34
                self.match(UseEffectGrammarParser.T__6)
                self.state = 35
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(UseEffectGrammarParser.ID)
            else:
                return self.getToken(UseEffectGrammarParser.ID, i)

        def getRuleIndex(self):
            return UseEffectGrammarParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)




    def params(self):

        localctx = UseEffectGrammarParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(UseEffectGrammarParser.ID)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==UseEffectGrammarParser.T__2:
                self.state = 40
                self.match(UseEffectGrammarParser.T__2)
                self.state = 41
                self.match(UseEffectGrammarParser.ID)
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DependencyArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(UseEffectGrammarParser.ID)
            else:
                return self.getToken(UseEffectGrammarParser.ID, i)

        def getRuleIndex(self):
            return UseEffectGrammarParser.RULE_dependencyArray

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDependencyArray" ):
                listener.enterDependencyArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDependencyArray" ):
                listener.exitDependencyArray(self)




    def dependencyArray(self):

        localctx = UseEffectGrammarParser.DependencyArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dependencyArray)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(UseEffectGrammarParser.T__7)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==UseEffectGrammarParser.ID:
                self.state = 48
                self.match(UseEffectGrammarParser.ID)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==UseEffectGrammarParser.T__2:
                    self.state = 49
                    self.match(UseEffectGrammarParser.T__2)
                    self.state = 50
                    self.match(UseEffectGrammarParser.ID)
                    self.state = 55
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 58
            self.match(UseEffectGrammarParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UseEffectGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(UseEffectGrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return UseEffectGrammarParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = UseEffectGrammarParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(UseEffectGrammarParser.T__9)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==UseEffectGrammarParser.T__11 or _la==UseEffectGrammarParser.ID:
                self.state = 61
                self.statement()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.match(UseEffectGrammarParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprStmt(self):
            return self.getTypedRuleContext(UseEffectGrammarParser.ExprStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(UseEffectGrammarParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return UseEffectGrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = UseEffectGrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [UseEffectGrammarParser.ID]:
                self.state = 69
                self.exprStmt()
                pass
            elif token in [UseEffectGrammarParser.T__11]:
                self.state = 70
                self.returnStmt()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 73
            self.match(UseEffectGrammarParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(UseEffectGrammarParser.ID, 0)

        def STRING(self):
            return self.getToken(UseEffectGrammarParser.STRING, 0)

        def getRuleIndex(self):
            return UseEffectGrammarParser.RULE_exprStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)




    def exprStmt(self):

        localctx = UseEffectGrammarParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_exprStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(UseEffectGrammarParser.ID)
            self.state = 76
            self.match(UseEffectGrammarParser.T__1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==UseEffectGrammarParser.STRING:
                self.state = 77
                self.match(UseEffectGrammarParser.STRING)


            self.state = 80
            self.match(UseEffectGrammarParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprStmt(self):
            return self.getTypedRuleContext(UseEffectGrammarParser.ExprStmtContext,0)


        def getRuleIndex(self):
            return UseEffectGrammarParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)




    def returnStmt(self):

        localctx = UseEffectGrammarParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(UseEffectGrammarParser.T__11)
            self.state = 83
            self.exprStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





